app/k8s-config/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yellow-cab-authentication-d
  labels:
    app: yellow-cab-authentication-p
spec:
  replicas: 3
  selector:
    matchLabels:
      app: yellow-cab-authentication-p
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 2
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: yellow-cab-authentication-p
    spec:
      containers:
        - name: authentication
          image: computacaonuvem2022/authentication:main
          imagePullPolicy: Always
          ports:
            - containerPort: 8001
            - containerPort: 8081
          resources:
            requests:
              memory: "100Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "250m"
          livenessProbe:
            httpGet:
              path: /api/authentication/health
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            tcpSocket:
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yellow-cab-business-intelligence-d
  labels:
    app: yellow-cab-business-intelligence-p
spec:
  replicas: 3
  selector:
    matchLabels:
      app: yellow-cab-business-intelligence-p
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 2
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: yellow-cab-business-intelligence-p
    spec:
      containers:
        - name: business-intelligence
          image: computacaonuvem2022/business-intelligence:main
          imagePullPolicy: Always
          ports:
            - containerPort: 8002
            - containerPort: 8082
          resources:
            requests:
              memory: "100Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "250m"
          livenessProbe:
            httpGet:
              path: /api/bi/health
              port: 8082
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            tcpSocket:
              port: 8082
            initialDelaySeconds: 10
            periodSeconds: 5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yellow-cab-statistics-d
  labels:
    app: yellow-cab-statistics-p
spec:
  replicas: 3
  selector:
    matchLabels:
      app: yellow-cab-statistics-p
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 2
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: yellow-cab-statistics-p
    spec:
      containers:
        - name: statistics
          image: computacaonuvem2022/statistics:main
          imagePullPolicy: Always
          ports:
            - containerPort: 8003
            - containerPort: 8083
          resources:
            requests:
              memory: "100Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "250m"
          livenessProbe:
            httpGet:
              path: /api/stats/health
              port: 8083
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            tcpSocket:
              port: 8083
            initialDelaySeconds: 10
            periodSeconds: 5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yellow-cab-zones-d
  labels:
    app: yellow-cab-zones-p
spec:
  replicas: 3
  selector:
    matchLabels:
      app: yellow-cab-zones-p
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 2
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: yellow-cab-zones-p
    spec:
      containers:
        - name: zones
          image: computacaonuvem2022/zones:main
          imagePullPolicy: Always
          ports:
            - containerPort: 8051
            - containerPort: 50051
          resources:
            requests:
              memory: "100Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "250m"
          readinessProbe:
            tcpSocket:
              port: 50051
            initialDelaySeconds: 10
            periodSeconds: 5
