app/k8s-config/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: yellow-cab-authentication
spec:
  type: ClusterIP
  selector:
    app: yellow-cab-authentication-p
  ports:
    - name: http
      port: 80
      targetPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: yellow-cab-authentication-m
spec:
  type: ClusterIP
  selector:
    app: yellow-cab-authentication-p
  ports:
    - name: http
      port: 80
      targetPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: yellow-cab-business-intelligence
spec:
  type: ClusterIP
  selector:
    app: yellow-cab-business-intelligence-p
  ports:
    - name: http
      port: 80
      targetPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: yellow-cab-business-intelligence-m
spec:
  type: ClusterIP
  selector:
    app: yellow-cab-business-intelligence-p
  ports:
    - name: http
      port: 80
      targetPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: yellow-cab-statistics
spec:
  type: ClusterIP
  selector:
    app: yellow-cab-statistics-p
  ports:
    - name: http
      port: 80
      targetPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: yellow-cab-statistics-m
spec:
  type: ClusterIP
  selector:
    app: yellow-cab-statistics-p
  ports:
    - name: http
      port: 80
      targetPort: 8003
---
apiVersion: v1
kind: Service
metadata:
  name: yellow-cab-zones
spec:
  type: ClusterIP
  selector:
    app: yellow-cab-zones-p
  ports:
    - name: http
      port: 80
      targetPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: yellow-cab-zones-m
spec:
  type: ClusterIP
  selector:
    app: yellow-cab-zones-p
  ports:
    - name: http
      port: 80
      targetPort: 8051
